<?xml version="1.0"?>
<package>

  <name>nautonomous_pose_utm</name>
  <version>0.0.0</version>
  <description>The nautonomous_pose_utm package</description>

  <maintainer email="waternet@todo.todo">waternet</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nautonomous_pose_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nautonomous_pose_msgs</run_depend>

</package>
